# job-hunter-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOAL.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ats_support_request.md  bug_report.md
.github/workflows/: ci.yml
docs/: ANALYSIS.md  PIPELINE_DIAGNOSTIC.md  PRODUCTION_DEPLOYMENT_STRATEGY.md  SPEC_INDEX.md
docs/specs/: SPEC_01_CORE_MODELS.md  SPEC_02_DATABASE.md  SPEC_03_CACHE_AND_VECTOR.md  SPEC_04_AGENT_FRAMEWORK.md  SPEC_05_PARSING_AGENTS.md  SPEC_06_DISCOVERY_AND_SCRAPING.md  SPEC_07_TOOLS.md  SPEC_08_ATS_CLIENTS.md  SPEC_09_SCORING_AND_OUTPUT.md  SPEC_10_OBSERVABILITY.md  SPEC_11_CLI_AND_DEVOPS.md
scripts/: pre-commit  run_autonomous.sh  test_component_ats_probing.py  test_component_ats_probing_extended.py  test_component_company_finder.py  test_component_job_processor.py  test_component_scorer.py  test_component_scraper.py  verify_goal.py
src/job_hunter_agents/: dryrun.py
src/job_hunter_agents/agents/: aggregator.py  base.py  company_finder.py  job_processor.py  jobs_scorer.py  jobs_scraper.py  notifier.py  prefs_parser.py  resume_parser.py
src/job_hunter_agents/data/: ats_seed_companies.py
src/job_hunter_agents/observability/: __init__.py  cost_tracker.py  logging.py  run_report.py  tracing.py
src/job_hunter_agents/orchestrator/: adaptive_pipeline.py  checkpoint.py  pipeline.py  temporal_activities.py  temporal_client.py  temporal_orchestrator.py  temporal_payloads.py  temporal_registry.py  temporal_worker.py  temporal_workflow.py
src/job_hunter_agents/prompts/: __init__.py  company_finder.py  job_processor.py  job_scorer.py  prefs_parser.py  resume_parser.py
src/job_hunter_agents/tools/: browser.py  duckduckgo_search.py  email_sender.py  embedder.py  factories.py  pdf_parser.py  web_search.py
src/job_hunter_cli/: main.py
src/job_hunter_core/: constants.py  exceptions.py  state.py
src/job_hunter_core/config/: settings.py
src/job_hunter_core/interfaces/: __init__.py  cache.py  embedder.py  repository.py  scraper.py  search.py
src/job_hunter_core/models/: __init__.py  candidate.py  company.py  job.py  run.py
src/job_hunter_infra/cache/: company_cache.py  db_cache.py  disk_cache.py  page_cache.py  redis_cache.py
src/job_hunter_infra/db/: engine.py  models.py  session.py
src/job_hunter_infra/vector/: similarity.py
tests/: conftest.py
tests/e2e/: __init__.py  test_full_pipeline_live.py
tests/fixtures/: resume_text.txt
tests/fixtures/ats_responses/: ashby_jobs.json  greenhouse_jobs.json  lever_jobs.json
tests/fixtures/html/: career_page.html
tests/fixtures/llm_responses/: batch_score.json  candidate_profile.json  company_candidates.json  extracted_job.json  search_preferences.json
tests/fixtures/search_results/: career_page_search.json
tests/integration/: conftest.py  test_cache_redis.py  test_checkpoint_persistence.py  test_cli_dryrun.py  test_db_repositories.py  test_pipeline_dryrun.py  test_pipeline_real_scraping.py  test_pipeline_tracing.py  test_temporal_pipeline.py
tests/mocks/: __init__.py  mock_factories.py  mock_llm.py  mock_settings.py  mock_tools.py
tests/unit/: conftest.py
tests/unit/agents/: test_aggregator.py  test_base.py  test_company_finder.py  test_job_processor.py  test_jobs_scorer.py  test_jobs_scraper.py  test_notifier.py  test_prefs_parser.py  test_resume_parser.py
tests/unit/cli/: test_main.py
(+42 files in other folders)
